--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Landing.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Landing.razor
@@ -155,9 +155,9 @@
                 <MudText Typo="Typo.h5" Color="Color.Default">@Model.Climate.Terminology</MudText>
             </CustomIcon>
 
-            <MudText Typo="Typo.subtitle1">Giraffe</MudText>
+            <MudText Typo="Typo.subtitle1">Horse</MudText>
             <MudText Class="my-2">
-                He who reads is not a giraffe (presumably)
+                He who reads is not a honse (perhapsment)
             </MudText>
 
             <MudText Typo="Typo.subtitle1">Help</MudText>
@@ -165,6 +165,30 @@
                 <MudIcon Icon="@IconCollection.Target" Size="Size.Small" />
                 [TGT]: Target position
             </MudText>
+
+            <MudText Typo="Typo.subtitle1">Tyre suppliers</MudText>
+            <MudTable Items="@TyreSuppliers" Bordered="true" Dense="true">
+                <HeaderContent>
+                    <MudTh>Name</MudTh>
+                    <MudTh>Life Bonus</MudTh>
+                    <MudTh>Wear</MudTh>
+                </HeaderContent>
+                <RowTemplate>
+                    <MudTd>
+                        <SupplierDisplay Colour="@context.Colour" Accent="@context.Accent">@context.Name</SupplierDisplay>
+                    </MudTd>
+                    <MudTd>
+                        <MudText Typo="Typo.caption">@context.Pace</MudText>
+                    </MudTd>
+                    <MudTd>
+                        <MudStack Row="true" Spacing="1" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center">
+                            <MudText Typo="Typo.caption">@context.WearMin</MudText>
+                            <MudIcon Size="Size.Small" Icon="@IconCollection.ArrowMoveHorizontal" />
+                            <MudText Typo="Typo.caption">@context.WearMax</MudText>
+                        </MudStack>
+                    </MudTd>
+                </RowTemplate>
+            </MudTable>
         </MudPaper>
     </MudItem>
 </MudGrid>
@@ -173,6 +197,7 @@
     [CascadingParameter] public RaweCeekModel Model { get; set; }
 
     [Parameter] public IEnumerable<Trait> TrackTraits { get; set; } = Enumerable.Empty<Trait>();
+    [Parameter] public List<Manufacturer> TyreSuppliers { get; set; } = new();
     [Parameter] public EventCallback<long> OnOpenTyrePicker { get; set; }
 
     public async Task HandleTyrePicker(long resultId)
