Made a few structural updates since I would appreciate a better structure for me code

--- a/SimTECH/SimTECH/Pages/RaceWeek/Index.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Index.razor
@@ -128,7 +128,7 @@
                 throw new InvalidOperationException("Somehow you landed inside a raceweek which is not valid for activation, dumbass");
 
             await _raceService.ActivateRace(race.Id);
-            race.State = State.Active;
+            race = await _raceService.GetRaceById(RaceId);
         }
         else if (race.State == State.Closed)
         {
