--- a/SimTECH/SimTECH/Pages/Seasons/Overview/EntrantWizard/Wizard.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/EntrantWizard/Wizard.razor
@@ -54,7 +54,7 @@
                 <ChildContent>
                     <MudStep Title="Add engines" Icon="@IconCollection.Engine">
                         <ChildContent>
-                            <AddEngines Engines="Engines" />
+                            <AddEngines Engines="@Engines" />
                         </ChildContent>
                     </MudStep>
                     <MudStep Title="Edit engines" Icon="@IconCollection.Engine">
@@ -101,7 +101,7 @@
                         <ChildContent>
                             @if (stepper.GetActiveIndex() == 6)
                             {
-                                <AddDrivers Drivers="@Drivers" Year="@Season.Year" Contracts="Contracts" />
+                                <AddDrivers Drivers="@Drivers" Year="@Season.Year" Contracts="@Contracts" />
                             }
                         </ChildContent>
                     </MudStep>
