--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/EntrantsTab/PowerRankings.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/EntrantsTab/PowerRankings.razor
@@ -2,7 +2,7 @@
     <MudPaper MinHeight="60px">
         <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Power rankings</MudText>
-            <ScreenshotIconButton TargetId="power-rankings-overview" />
+            <ScreenshotIconButton TargetId="power-rankings-overview" Colour="Color.Tertiary" />
         </MudStack>
     </MudPaper>
     <MudDataGrid T="PowerRankingItem" Items="@PowahList" Dense="true" Loading="@loading">
